# bashman

./: .gitignore  .gitlab-ci.yml  .pylintrc  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
src/bashman/: cli.py
src/bashman.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bashman/server/: app.py  models.py
src/bashman/server/database/: __init__.py  base.py  factory.py  sqlite.py
src/bashman/server/templates/: index.html
src/perf_publish/: __main__.py
tests/: test_app.py  test_app_auth.py  test_app_extra.py  test_app_sqlite_queue.py  test_cli.py  test_cli_install.py  test_cli_key_validation.py  test_cli_keys.py  test_cli_list.py  test_cli_publish.py  test_cli_rm.py  test_cli_signed_headers.py  test_database_base.py  test_database_sqlite.py  test_parse_set_pairs.py  test_run_shellcheck_bytes_subprocess_result.py
