# pyproject.toml

[tool.poetry]
name = "bashman"
version = "0.1.0"
description = "Bare-bones Bashman MVP: FastAPI registry + CLI"
authors = ["You <you@example.com>"]
readme = "README.md"
license = "MIT"

# Tell Poetry where to find your package
packages = [
  { include = "bashman", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116"
uvicorn = { extras = ["standard"], version = "^0.35" }
jinja2 = "^3.1"
python-multipart = "*"
typer = "^0.16"
httpx = "*"

# Legacy dev-dependencies that poetry-core still supports
[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"

# Allow pip install -e ".[dev]" to pull in test tooling
[tool.poetry.extras]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
