# pyproject.toml

[tool.poetry]
name = "bashman"
version = "0.1.0"
description = "Bare-bones Bashman MVP: FastAPI registry + CLI"
authors = ["Ian Ellis <ellisiana@gmail.com>"]
readme = "README.md"
license = "MIT"

# Tell Poetry where to find your package
packages = [
  { include = "bashman", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116"
uvicorn = { extras = ["standard"], version = "^0.35" }
jinja2 = "^3.1"
python-multipart = "*"
typer = "^0.16"
httpx = "*"
# Database dependencies
aiosqlite = "^0.20.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0", optional = true }
asyncpg = { version = "^0.29.0", optional = true }
aiomysql = { version = "^0.2.0", optional = true }
cryptography = "42.0.8"

[tool.poetry.group.dev.dependencies]
build = "^0.10.0"
pytest = "^8.0"
pytest-cov = "^6.0"
pytest-asyncio = "^1.1.0"
twine = "^6.1.0"

# Allow pip install -e ".[dev]" to pull in test tooling (kept for compatibility)
[tool.poetry.extras]
dev = ["build", "pytest", "pytest-cov", "pytest-asyncio"]
postgresql = ["sqlalchemy", "asyncpg"]
mysql = ["sqlalchemy", "aiomysql"]
full-db = ["sqlalchemy", "asyncpg", "aiomysql"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
